--- a/La Tiendita.css
+++ b/La Tiendita.css
@@ -1,102 +1,191 @@
 * {
-    font-family: "Roboto";
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    letter-spacing: 1px;
-    box-sizing: border-box;
-  }
-  body {
-    background: #f9fafa;
-    padding: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .block {
-    margin: 20px;
-    border-radius: 4px;
-    width: 280px;
-    min-height: 430px;
-    background: #fff;
-    padding: 23px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    box-shadow: 0 2px 55px rgba(0,0,0,0.1);
-  }
-  .top {
-    border-bottom: 1px solid #e5e5e5;
-    padding-bottom: 10px;
-  }
-  .top ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .top a {
-    color: #9e9e9e;
-  }
-  .top a:hover {
-    color: #c7ccdb;
-  }
-  .converse {
-    padding: 2px 10px;
-    border-radius: 20px;
-    text-transform: uppercase;
-    font-size: 14px;
-  }
-  .middle {
-    margin-bottom: 40px;
-  }
-  .middle img {
-    width: 100%;
-  }
-  .bottom {
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-  .heading {
-    font-size: 17px;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-    letter-spacing: 0;
-  }
-  .info {
-    font-size: 14px;
-    color: #969696;
-    margin-bottom: 10px;
-  }
-  .style {
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-  .old-price {
-    color: #f00;
-    text-decoration: line-through;
-  }
+  font-family: "Roboto";
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  letter-spacing: 1px;
+  box-sizing: border-box;
+}
+body {
+  background: #f9fafa;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.block {
+  margin: 20px;
+  border-radius: 4px;
+  width: 280px;
+  min-height: 430px;
+  background: #fff;
+  padding: 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  box-shadow: 0 2px 55px rgba(0, 0, 0, 0.1);
+}
+.top {
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 10px;
+}
+.top ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.top a {
+  color: #9e9e9e;
+}
+.top a:hover {
+  color: #c7ccdb;
+}
+.converse {
+  padding: 2px 10px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.middle {
+  margin-bottom: 40px;
+}
+.middle img {
+  width: 100%;
+}
+.bottom {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+.heading {
+  font-size: 17px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  letter-spacing: 0;
+}
+.info {
+  font-size: 14px;
+  color: #969696;
+  margin-bottom: 10px;
+}
+.style {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.old-price {
+  color: #f00;
+  text-decoration: line-through;
+}
+
+/**     CSS MODAL/
+
+  /* Estilos para el modal */
+/* Estilo del modal */
+/* Estilo del modal */
+.modal {
+  display: none; /* Oculta el modal por defecto */
+  position: fixed; /* Mantén el modal en su lugar */
+  z-index: 1; /* Asegúrate de que esté sobre otros contenidos */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo negro con opacidad */
+  justify-content: center;
+  align-items: center;
+}
+
+/* Estilo del contenido del modal */
+.modal-content {
+  background-color: #fff;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Ancho del modal */
+  max-width: 600px;
+  border-radius: 10px;
+  position: relative;
+}
+
+/* Botón de cerrar */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+}
+
+/* Estilo para la imagen del producto en el modal */
+.modal-content img {
+  justify-content: center;
+  max-width: 100%; /* Limita el ancho máximo al 100% del contenedor del modal */
+  height: auto; /* Ajusta la altura automáticamente para mantener la relación de aspecto */
+  max-height: 300px; /* Ajusta la altura máxima según tu necesidad */
+  object-fit: contain; /* Asegura que la imagen se ajuste dentro del contenedor sin recortarla */
+
+  float: right;
+  margin-top: 15%;
+}
+
+/* Estilos adicionales */
+.product-details {
+  margin-top: 10px;
+}
+
+.product-details ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.product-details li {
+  margin-bottom: 8px;
+}
+
+.modal-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.modal-description {
+  margin: 10px 0;
+}
+
+.modal-price {
+  font-size: 18px;
+  color: #555;
+}
+
+.old-price {
+  text-decoration: line-through;
+  color: red;
+}
